
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";

message so_extUserPost {
	uint64                                post_id                  =      1;
    prototype.user_post_create_order      post_created_order       =      2;
      
}


message so_mem_extUserPost_by_post_id {
	uint64                             	post_id              = 1;
}


message so_mem_extUserPost_by_post_created_order {
	prototype.user_post_create_order   	post_created_order   = 1;
}


message so_list_extUserPost_by_post_created_order {
	prototype.user_post_create_order   	post_created_order   = 1;
	uint64                             	post_id              = 2;
}


message so_unique_extUserPost_by_post_id {
	uint64                             	post_id              = 1;
}
